// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`architect handoff template snapshots > architect to planner renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`planner\` agent **only** receives the text inside your \`handoff --next-role="planner"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (Architect → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the architect checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for module boundaries, APIs, schemas, indexes and queries, invariants, failure and recovery handling, tests, and implementation sequence.
- Name concrete repository paths, existing abstractions, APIs/types, state/data flow, acceptance criteria, risks, and verification steps.

- Cite repository evidence for domain model/entity ownership, lifecycle, invariants, identifiers, and relationships.
- Define service and module boundaries, public and internal APIs, function signatures, and ownership of side effects.
- Analyze concurrency and races: concurrent writers, idempotency, ordering and monotonicity, retries, transactions, and failure/recovery behavior.
- Design read patterns first: primary read paths, indexes, projections/read models, query shapes, scan and transaction limits, and invalidation/subscription scope.
- Account for Convex reactivity and bandwidth: query invalidation patterns, avoiding unnecessary reactive fanout, and separating high-frequency heartbeat/liveness/status fields from low-frequency identity/configuration fields.
- Specify concrete schema, query, and mutation changes; migration/backfill sequence; tests; and verification order.

## Force Multipliers
<name the existing abstractions, patterns, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/query shape, state/data/event boundaries, and target code detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Target code, API/type signature, query shape, or migration/backfill step.
// Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (planner-owned)
<list cross-file interfaces, schemas, API contracts, state/data boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared signatures, schemas, query/mutation shapes, or state contracts.
\`\`\`

### Reference snippets
\`\`\`typescript
// Canonical imports, call patterns, or data-flow examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact data shape, API contract, migration result, and failure behavior>
- Include repository test coverage for domain, concurrency, read-pattern, migration, and recovery risk areas.
- Verify the implemented user-facing entry point or task-delivery path end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the architect; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent APIs, schema fields, query shapes, indexes, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and migration/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="architect" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`architect handoff template snapshots > architect to solo renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`solo\` agent **only** receives the text inside your \`handoff --next-role="solo"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (Architect → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the architect checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for module boundaries, APIs, schemas, indexes and queries, invariants, failure and recovery handling, tests, and implementation sequence.
- Name concrete repository paths, existing abstractions, APIs/types, state/data flow, acceptance criteria, risks, and verification steps.

- Cite repository evidence for domain model/entity ownership, lifecycle, invariants, identifiers, and relationships.
- Define service and module boundaries, public and internal APIs, function signatures, and ownership of side effects.
- Analyze concurrency and races: concurrent writers, idempotency, ordering and monotonicity, retries, transactions, and failure/recovery behavior.
- Design read patterns first: primary read paths, indexes, projections/read models, query shapes, scan and transaction limits, and invalidation/subscription scope.
- Account for Convex reactivity and bandwidth: query invalidation patterns, avoiding unnecessary reactive fanout, and separating high-frequency heartbeat/liveness/status fields from low-frequency identity/configuration fields.
- Specify concrete schema, query, and mutation changes; migration/backfill sequence; tests; and verification order.

## Force Multipliers
<name the existing abstractions, patterns, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/query shape, state/data/event boundaries, and target code detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Target code, API/type signature, query shape, or migration/backfill step.
// Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (configured entry-point-owned)
<list cross-file interfaces, schemas, API contracts, state/data boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared signatures, schemas, query/mutation shapes, or state contracts.
\`\`\`

### Reference snippets
\`\`\`typescript
// Canonical imports, call patterns, or data-flow examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact data shape, API contract, migration result, and failure behavior>
- Include repository test coverage for domain, concurrency, read-pattern, migration, and recovery risk areas.
- Verify the implemented user-facing entry point or task-delivery path end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the architect; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent APIs, schema fields, query shapes, indexes, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and migration/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="architect" --next-role="solo" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`architect handoff template snapshots > entry point to architect renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`architect\` agent **only** receives the text inside your \`handoff --next-role="architect"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (planner → architect)

The automatically injected \`<user-message>\` is the authoritative request. Add only concise context that the Architect needs to design within the existing repository and team scope.

Provide the request, relevant constraints, and the files or product surfaces that need inspection. Ask for one evidence-backed design focused on module boundaries, APIs, schemas, indexes and queries, invariants, failure and recovery handling, tests, and implementation sequence.

After completing the design, hand it back to \`planner\` with the normal handoff command. Stop after the successful handoff; do not implement the design or delegate further work.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="architect" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`architect handoff template snapshots > generic architect handback renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`<entry-point-role>\` agent **only** receives the text inside your \`handoff --next-role="<entry-point-role>"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (Architect → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the architect checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for module boundaries, APIs, schemas, indexes and queries, invariants, failure and recovery handling, tests, and implementation sequence.
- Name concrete repository paths, existing abstractions, APIs/types, state/data flow, acceptance criteria, risks, and verification steps.

- Cite repository evidence for domain model/entity ownership, lifecycle, invariants, identifiers, and relationships.
- Define service and module boundaries, public and internal APIs, function signatures, and ownership of side effects.
- Analyze concurrency and races: concurrent writers, idempotency, ordering and monotonicity, retries, transactions, and failure/recovery behavior.
- Design read patterns first: primary read paths, indexes, projections/read models, query shapes, scan and transaction limits, and invalidation/subscription scope.
- Account for Convex reactivity and bandwidth: query invalidation patterns, avoiding unnecessary reactive fanout, and separating high-frequency heartbeat/liveness/status fields from low-frequency identity/configuration fields.
- Specify concrete schema, query, and mutation changes; migration/backfill sequence; tests; and verification order.

## Force Multipliers
<name the existing abstractions, patterns, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/query shape, state/data/event boundaries, and target code detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Target code, API/type signature, query shape, or migration/backfill step.
// Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (configured entry-point-owned)
<list cross-file interfaces, schemas, API contracts, state/data boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared signatures, schemas, query/mutation shapes, or state contracts.
\`\`\`

### Reference snippets
\`\`\`typescript
// Canonical imports, call patterns, or data-flow examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact data shape, API contract, migration result, and failure behavior>
- Include repository test coverage for domain, concurrency, read-pattern, migration, and recovery risk areas.
- Verify the implemented user-facing entry point or task-delivery path end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the architect; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent APIs, schema fields, query shapes, indexes, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and migration/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop. Replace \`<entry-point-role>\` with the configured entry-point role before running it.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="architect" --next-role="<entry-point-role>" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;
